updating methods flagged as depreciated since Java 9